# pyprocut

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  cookiecutter.json  project_template_creation_tests.sh  pyproject.toml
docs/: dev_tools_setup.md  style.md  sw_eng_hygiene.md
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.repo_name}}/: .gitignore  .travis.yml  Dockerfile.docker_exe  README.md  pyproject.toml
{{cookiecutter.repo_name}}/docs/dev/: release.md
{{cookiecutter.repo_name}}/tests/: conftest.py
{{cookiecutter.repo_name}}/tests/test_{{cookiecutter.package_name}}/: test_TODO_write_your_own_module.py
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: TODO_write_your_own_module.py  utils.py
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/exe/: TODO_main_program.py  batch_predict.py  download_data.py  evaluate_model.py  format_data.py  make_train.py  model_server.py  train_model.py
