[tool.poetry]
name = "pyprocut"
version = "0.1.0"
description = "Cookiecutter template for Python projects."
authors = ["Malcolm Greaves <greaves.malcolm@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
cookiecutter = "^1.7.2"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
black = "^19.10b0"
flake8 = "^3.8.3"
tox = "^3.16.1"
ipython = "^7.16.1"
ipdb = "^0.13.3"
pytest-cookies = "^0.5.1"
pytest-cov = "^2.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
