[tool.poetry]
name = "{{cookiecutter.repo_name}}"
version = "0.0.0"
description = "TODO: One-sentence description."
authors = ["TODO Name <youremail@domain>"]
license = "Apache-2.0"
# Ensure that all project package directories are present here with `{include="X"}` syntax.
packages = [
    { include = "{{cookiecutter.package_name}}" },
]
#### TODO: look at https://python-poetry.org/docs/pyproject/ for documentation on what can go in this file.

[tool.poetry.dependencies]
python = "^3.8"
pywise = "*"
{%- if cookiecutter.project_type.startswith("ml") %}
tqdm = "*"
pandas = "*"
torch = "*"
pytorch-lightning = "*"
transformers = "*"
spacy = "*"
torchvision = "*"
albumentations = "*"
{%- endif %}
# TODO: Write your dependencies here.
#       Or interactively add with `poetry add <dependency name>`


[tool.poetry.dev-dependencies]
mypy = "^0.782"
black = "^19.10b0"
flake8 = "^3.8.3"
ipython = "^7.16.1"
ipdb = "^0.13.3"
pytest-cov = "^2.10.0"
pre-commit = "^2.5.1"
# TODO: Write more testing or development tool dependencies.
#       Or interactively add with `poetry add --dev <dependency name>`

[tool.poetry.scripts]
{%- if cookiecutter.project_type.startswith("ml") %}
download = '{{cookiecutter.package_name}}.exe.download_data:entrypoint'
format-data = '{{cookiecutter.package_name}}.exe.format_data:entrypoint'
make-train ='{{cookiecutter.package_name}}.exe.make_train:entrypoint'
train = '{{cookiecutter.package_name}}.exe.train_model:entrypoint'
evaluate = '{{cookiecutter.package_name}}.exe.evaluate_model:entrypoint'
predict = '{{cookiecutter.package_name}}.exe.batch_predict:entrypoint'
serve = '{{cookiecutter.package_name}}.exe.model_server:entrypoint'
{% else %}
command_name_in_env_TODO = '{{cookiecutter.package_name}}.exe.TODO_main_program:entrypoint'
{%- endif %}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
